--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
     strategy:
       matrix:
         dotnet-version: [9.0.x] # Can add multiple .NET versions here to test against (For example, testing a new version of .NET before it's released)
-        dalamud-version: ["api12"] # Can add multiple Dalamud branches here to test against (For example, testing against Dalamud staging)
+        dalamud-version: ["latest"] # Can add multiple Dalamud branches here to test against (For example, testing against Dalamud staging)
     env:
       DALAMUD_HOME: /tmp/dalamud
       IsCI: true
